fix: overflow style

--- a/packages/renderer/src/inject/modules/home/style.less
+++ b/packages/renderer/src/inject/modules/home/style.less
@@ -19,7 +19,7 @@ body {
         }
       }
     }
-    div:last-child {
+    > div:last-child {
       overflow-y: auto;
     }
   }
